--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "video conversion app using ffmpeg",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --experimental-wasm-threads server.mjs"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "express": "^4.18.1",
     "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
     "p-queue": "^7.3.0"
   }
 }
